--- a/products.html
+++ b/products.html
@@ -49,94 +49,94 @@
             Laxmi Marbles. Buy rare and unique stones from our product range that will help mesmerizing your eyes.</p>
         <div class="row">
             <div class="column">
-                <img src="/images/marble/BEIGE-MARFIL.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/BEIGE-MARFIL.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/BIANCO-MARFIL.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/BIANCO-MARFIL.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/BLUE-BRESCIA.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/BLUE-BRESCIA.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/BOTTOCHINO-VENATO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/BOTTOCHINO-VENATO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/BRESCIA-PARADISEA.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/BRESCIA-PARADISEA.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/BRONZE-STATUARIO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/BRONZE-STATUARIO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
                 <img src="/images/marble/CLASSIC-BEIGE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/COSMIC-BEIGE.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/COSMIC-BEIGE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/CREMA-DELMONTE.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/CREMA-DELMONTE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/CREMA-PERLATINO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/CREMA-PERLATINO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/CREMA-PINTELLO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/CREMA-PINTELLO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/MYSTIC-CREAM.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/MYSTIC-CREAM.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-ARMIONE-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-ARMIONE-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-BIANCO-FAVO-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-BIANCO-FAVO-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-CLOUDY-PINK-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-CLOUDY-PINK-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-SUNRISE-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-SUNRISE-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-TIGER-PINK-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-TIGER-PINK-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-VANILA-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-VANILA-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/ONYX-(-WHITE-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/ONYX-(-WHITE-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/PALISSANDRO-BRONZETTO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/PALISSANDRO-BRONZETTO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/PAONAZETTO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/PAONAZETTO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/PORTUGAL-WHITE-(-M-).jpg   " alt="marble image" style="width:100%">
+                <img src="images/marble/PORTUGAL-WHITE-(-M-).jpg   " alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/SIVEC-WHITE.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/SIVEC-WHITE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/SMOKEY-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/SMOKEY-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/STATUARIO-ALTRISIMO.jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/STATUARIO-ALTRISIMO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/TRAVERTINO-(-IR-TIGER-WHITE-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/TRAVERTINO-(-IR-TIGER-WHITE-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/TRAVERTINO-(-IR-TITANIUM-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/TRAVERTINO-(-IR-TITANIUM-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/TRAVERTINO-(-IR-YELLOW-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/TRAVERTINO-(-IR-YELLOW-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/TRAVERTINO-(-NAVONA-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/TRAVERTINO-(-NAVONA-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/marble/TRAVERTINO-(-NOCHE-TIGER-).jpg" alt="marble image" style="width:100%">
+                <img src="images/marble/TRAVERTINO-(-NOCHE-TIGER-).jpg" alt="marble image" style="width:100%">
             </div>
         </div>
     </div>
@@ -149,94 +149,94 @@
             Laxmi Marbles. Buy rare and unique stones from our product range that will help mesmerizing your eyes.</p>
         <div class="row" id="section_granite">
             <div class="column">
-                <img src="/images/granite/Antique Beige Marble.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/Antique Beige Marble.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/ARABESCATO-GRIGIO.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/ARABESCATO-GRIGIO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/BLACK-BELLEVUE.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/BLACK-BELLEVUE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/BOTTOCHINO-CREMA.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/BOTTOCHINO-CREMA.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/BRESCIA-ADONIS.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/BRESCIA-ADONIS.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/BRONZE-ARMANI.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/BRONZE-ARMANI.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/BRUNO-SEQUOIA-PELLE.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/BRUNO-SEQUOIA-PELLE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/CARMEL-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/CARMEL-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/CASTANO-VIOLA.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/CASTANO-VIOLA.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/CEPPO-DE-GRE.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/CEPPO-DE-GRE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column" >
-                <img src="/images/granite/CIANITUS-PELLE.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/CIANITUS-PELLE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/COPENHAGEN.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/COPENHAGEN.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/FELIZ-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/FELIZ-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/FIOR-DE-PESCO.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/FIOR-DE-PESCO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/FUSION-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/FUSION-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/GRIGIO-MONET-SKY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/GRIGIO-MONET-SKY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/GRIGIO-MARAZZO.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/GRIGIO-MARAZZO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/GRIS-MOROCCO.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/GRIS-MOROCCO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/LEMURIAN-LABRADORITE.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/LEMURIAN-LABRADORITE.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/MATRIX-SPAZZO.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/MATRIX-SPAZZO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column" >
-                <img src="/images/granite/NERO-DORATO.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/NERO-DORATO.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/NOIR-SAINT-LAURENT.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/NOIR-SAINT-LAURENT.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/PALM-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/PALM-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/ROLEX-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/ROLEX-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/SERENGETI.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/SERENGETI.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/TOBACCO-BROWN.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/TOBACCO-BROWN.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/TOBACCO-GREY.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/TOBACCO-GREY.jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/TRAVERTINO-(-IR-SILVER-).jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/TRAVERTINO-(-IR-SILVER-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column" >
-                <img src="/images/granite/TRAVERTINO-(-RED-).jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/TRAVERTINO-(-RED-).jpg" alt="marble image" style="width:100%">
             </div>
             <div class="column">
-                <img src="/images/granite/VERDE-TARTARUGA.jpg" alt="marble image" style="width:100%">
+                <img src="images/granite/VERDE-TARTARUGA.jpg" alt="marble image" style="width:100%">
             </div>
 
 
