--- a/about us.html
+++ b/about us.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="/images/20220831_180841.jpg" alt="Jane" style="width:100%">
+          <img src="images/20220831_180841.jpg" alt="Jane" style="width:100%">
           <div class="container">
             <h2>Mukesh Seervi</h2>
             <p class="title">CEO & Founder</p>
@@ -59,7 +59,7 @@
     
       <div class="column">
         <div class="card">
-          <img src="/images/20220831_180841.jpg" alt="Mike" style="width:100%">
+          <img src="images/20220831_180841.jpg" alt="Mike" style="width:100%">
           <div class="container">
             <h2>Mukesh Seervi</h2>
             <p class="title">Art Director</p>
@@ -72,7 +72,7 @@
       
       <div class="column">
         <div class="card">
-          <img src="/images/20220831_180841.jpg" alt="John" style="width:100%">
+          <img src="images/20220831_180841.jpg" alt="John" style="width:100%">
           <div class="container">
             <h2>Mukesh Seervi</h2>
             <p class="title">Designer</p>
